--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,8 @@
+* text=auto
+
+*.{js,ts,tsx,jsx,css,scss,html,json,md,yml,yaml} text eol=lf
+*.sh text eol=lf
+*.bat text eol=crlf
 *.png filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.wav filter=lfs diff=lfs merge=lfs -text
