--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,12 +16,14 @@
 
     "baseUrl": "./",
     "paths": {
-      "@core/*": ["src/core/*"],
-      "@game/*": ["src/game/*"],
-      "@ui/*": ["src/ui/*"],
-      "@data/*": ["src/data/*"],
-      "@types/*": ["src/types/*"],
-      "@persistence/*": ["src/persistence/*"]
+        "@source/*": ["src/*"],
+        "@core/*": ["src/core/*"],
+        "@game/*": ["src/game/*"],
+        "@ui/*": ["src/ui/*"],
+        "@data/*": ["src/data/*"],
+        "@types/*": ["src/types/*"],
+        "@persistence/*": ["src/persistence/*"],
+        "@engine/*": ["src/engine/*"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts"],
