--- a/.gitattributes
+++ b/.gitattributes
@@ -3,12 +3,13 @@
 *.{js,ts,tsx,jsx,css,scss,html,json,md,yml,yaml} text eol=lf
 *.sh text eol=lf
 *.bat text eol=crlf
+# Large binary assets (tracked by Git LFS)
 *.png filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.wav filter=lfs diff=lfs merge=lfs -text
 *.ogg filter=lfs diff=lfs merge=lfs -text
 *.fbx filter=lfs diff=lfs merge=lfs -text
-*.mp4 filter=lfs diff=lfs merge=lfs -text
 *.psd filter=lfs diff=lfs merge=lfs -text
+*.mp4 filter=lfs diff=lfs merge=lfs -text
 *.bin filter=lfs diff=lfs merge=lfs -text
 *.bytes filter=lfs diff=lfs merge=lfs -text
